# ai-kingdom-simulator

./: PROJECT_PROGRESS.md
backend/: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  handlers.py  lifespan.py  logger.py  security.py
backend/app/db/: database.py
backend/app/dependencies/: database.py
backend/app/models/: base_model.py
backend/app/modules/auth/: constants.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/buildings/: building_definition.py  constants.py  enums.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/resources/: constants.py  enums.py  exceptions.py  models.py  repository.py  service.py
backend/app/modules/users/: model.py  repository.py  schemas.py
backend/app/modules/worlds/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/schemas/: common.py
backend/app/shared/: constants.py  enums.py  object_id.py  pagination.py  repository.py  responses.py  utils.py
backend/app/shared/repositories/: base_repository.py
