[project]
name = "ai-kingdom-simulator"
version = "0.1.0"
description = "AI-powered kingdom simulation game backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "motor>=3.7.0",
    "pymongo>=4.13.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "email-validator>=2.2.0",
    "python-dotenv>=1.1.0",
    "apscheduler>=3.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"